--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -1,56 +1,58 @@
 <section class="content">
   <div class="block-content">
-      <h3 class="block-title">Contacto</h3>
-      <div class="row">
-          <div class="col-md-6">
-              <form class="contact-form" action="php/send_mail.php" method="post" id="contact_form">
-                  <div class="form-control-wrap">
-                      <div id="message" class="alert alert-danger alert-dismissible fade"></div>
-                      <div class="form-group">
-                          <input type="text" class="form-control" id="fname" placeholder="Nombre*" name="fname">
-                      </div>
-                      <div class="form-group mar-top-40">
-                          <input type="email" class="form-control" id="email" placeholder="Correo Electronico*" name="email">
-                      </div>
-                      <div class="form-group mar-top-60">
-                          <textarea class="form-control" rows="10" name="comment" id="comment" placeholder="Su Mensaje"></textarea>
-                      </div>
-                      <div class="form-group mar-top-40">
-                          <button type="submit" class="btn v7">Enviar Mensaje</button>
-                      </div>
-                  </div>
-              </form>
-          </div>
+      <h3 class="block-title">Casas</h3>
 
-          <div class="col-md-5 offset-md-1">
-              <div class="contact-content">
-                  <div class="contact-icon">
-                      <i class="ion-ios-location-outline"></i>
-                  </div>
-                  <div class="contact-details">
-                      <h5>Dirección</h5>
-                      <p>Venezuela, Zulia, Maracaibo</p>
-                  </div>
-              </div>
-              <div class="contact-content">
-                  <div class="contact-icon">
-                      <i class="ion-ios-telephone-outline"></i>
-                  </div>
-                  <div class="contact-details">
-                      <h5>Telefono</h5>
-                      <p> <a href="tel:+584124257178">+58 - 4124 257 178</a></p>
-                  </div>
-              </div>
-              <div class="contact-content">
-                  <div class="contact-icon">
-                      <i class="ion-ios-email-outline"></i>
-                  </div>
-                  <div class="contact-details">
-                      <h5>Correo</h5>
-                      <p>isaac.rod33@gmail.com</p>
-                  </div>
-              </div>
-          </div>
+      <mat-form-field appearance="fill">
+        <mat-label>Elige una casa</mat-label>
+        <mat-select [(ngModel)]="selectedValue" name="house">
+          <mat-option (onSelectionChange)="change($event)" *ngFor="let house of houses" [value]="house.value">
+            {{ house.viewValue }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort>
+      
+          <!-- Name Column -->
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+            <td mat-cell *matCellDef="let estudiantes"> {{estudiantes.name}} </td>
+          </ng-container>
+      
+          <!-- House Column -->
+          <ng-container matColumnDef="house">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> House </th>
+            <td mat-cell *matCellDef="let estudiantes"> {{estudiantes.house}} </td>
+          </ng-container>
+      
+          <!-- BirthDay Column -->
+          <ng-container matColumnDef="dateOfBirth">
+            <th mat-header-cell *matHeaderCellDef> BirthDay </th>
+            <td mat-cell *matCellDef="let estudiantes"> {{estudiantes.dateOfBirth}} </td>
+          </ng-container>
+      
+          <!-- Patronus Column -->
+          <ng-container matColumnDef="patronus">
+            <th mat-header-cell *matHeaderCellDef> Patronus </th>
+            <td mat-cell *matCellDef="let estudiantes"> {{estudiantes.patronus}} </td>
+          </ng-container>
+
+          <!-- Imagen Column -->
+          <ng-container matColumnDef="image">
+            <th mat-header-cell *matHeaderCellDef> Img </th>
+            <td mat-cell *matCellDef="let estudiantes"> <img class="avatar" [src] = "estudiantes.image ? estudiantes.image : myImgUrl"/> </td>
+          </ng-container>
+      
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                       showFirstLastButtons 
+                       aria-label="Select page of periodic estudiantes">
+        </mat-paginator>
       </div>
-  </div>
+          
+      
+      </div>
 </section>
