--- a/src/app/portafolio/portafolio.component.html
+++ b/src/app/portafolio/portafolio.component.html
@@ -1,178 +1,59 @@
 <section class="content">
   <div class="block-content">
-      <h3 class="block-title">Portafolio</h3>
-      <div class="row">
-          <div class="col-md-12">
-              <div class="filters">
-                  <span>Filters :</span>
-                  <ul id="filters">
-                      <li class="active" data-filter="*">All</li>
-                      <li data-filter=".artwork">Art Work</li>
-                      <li data-filter=".webdesign">Web Design</li>
-                      <li data-filter=".design">Design</li>
-                  </ul>
-              </div>
-              <div class="portfolio-container row isotope" id="portfolio-container">
-                  <!-- WORK 1 START -->
-                  <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item artwork">
-                      <a class="open-project" href="project-1.html">
-                          <div class="portfolio-column">
-                              <div class="portfolio-hover">
-                                  <div class="portfolio-content">
-                                      <h2>CEREAL</h2>
-                                      <hr>
-                                      <p>View details.</p>
-                                  </div>
-                                  <div class="portfolio-overlay"></div>
-                              </div>
-                              <img src="assets\images\portfolio\masonry\001.jpeg" alt="">
-                          </div>
-                      </a>
-                  </div>
-                  <!-- WORK 1 END -->
-                  <!-- WORK 2 START -->
-                  <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item webdesign">
-                      <a class="open-project" href="project-2.html">
-                          <div class="portfolio-column">
-                              <div class="portfolio-hover">
-                                  <div class="portfolio-content">
-                                      <h2>NOTES</h2>
-                                      <hr>
-                                      <p>View details.</p>
-                                  </div>
-                                  <div class="portfolio-overlay"></div>
-                              </div>
-                              <img src="assets\images\portfolio\masonry\002.jpeg" alt="">
-                          </div>
-                      </a>
-                  </div>
-                  <!-- WORK 2 END -->
-                  <!-- WORK 3 START -->
-                  <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item webdesign">
-                      <a class="open-project" href="project-3.html">
-                          <div class="portfolio-column">
-                              <div class="portfolio-hover">
-                                  <div class="portfolio-content">
-                                      <h2>TIMES</h2>
-                                      <hr>
-                                      <p>View details.</p>
-                                  </div>
-                                  <div class="portfolio-overlay"></div>
-                              </div>
-                              <img src="assets\images\portfolio\masonry\003.jpeg" alt="">
-                          </div>
-                      </a>
-                  </div>
-                  <!-- WORK 3 END -->
-                  <!-- WORK 4 START -->
-                  <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item artwork">
-                      <a class="open-project" href="project-4.html">
-                          <div class="portfolio-column">
-                              <div class="portfolio-hover">
-                                  <div class="portfolio-content">
-                                      <h2>STATIONARY</h2>
-                                      <hr>
-                                      <p>View details.</p>
-                                  </div>
-                                  <div class="portfolio-overlay"></div>
-                              </div>
-                              <img src="assets\images\portfolio\masonry\004.jpeg" alt="">
-                          </div>
-                      </a>
-                  </div>
-                  <!-- WORK 4 END -->
-                  <!-- WORK 5 START -->
-                  <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item design">
-                      <a class="open-project" href="project-5.html">
-                          <div class="portfolio-column">
-                              <div class="portfolio-hover">
-                                  <div class="portfolio-content">
-                                      <h2>PH.D</h2>
-                                      <hr>
-                                      <p>View details.</p>
-                                  </div>
-                                  <div class="portfolio-overlay"></div>
-                              </div>
-                              <img src="assets\images\portfolio\masonry\005.jpeg" alt="">
-                          </div>
-                      </a>
-                  </div>
-                  <!-- WORK 5 END -->
-                  <!-- WORK 6 START -->
-                  <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item design">
-                      <a class="open-project" href="project-6.html">
-                          <div class="portfolio-column">
-                              <div class="portfolio-hover">
-                                  <div class="portfolio-content">
-                                      <h2>WAG MAGAZINE</h2>
-                                      <hr>
-                                      <p>View details.</p>
-                                  </div>
-                                  <div class="portfolio-overlay"></div>
-                              </div>
-                              <img src="assets\images\portfolio\masonry\006.jpeg" alt="">
-                          </div>
-                      </a>
-                  </div>
-                  <!-- WORK 6 END -->
-                  <!-- WORK 7 START -->
-                  <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item webdesign">
-                      <a class="open-project" href="project-1.html">
-                          <div class="portfolio-column">
-                              <div class="portfolio-hover">
-                                  <div class="portfolio-content">
-                                      <h2>LOOK</h2>
-                                      <hr>
-                                      <p>View details.</p>
-                                  </div>
-                                  <div class="portfolio-overlay"></div>
-                              </div>
-                              <img src="assets\images\portfolio\masonry\007.jpeg" alt="">
-                          </div>
-                      </a>
-                  </div>
-                  <!-- WORK 7 END -->
-                  <!-- WORK 8 START -->
-                  <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item artwork">
-                      <a class="open-project" href="estudiantes.html">
-                          <div class="portfolio-column">
-                              <div class="portfolio-hover">
-                                  <div class="portfolio-content">
-                                      <h2>IPAD</h2>
-                                      <hr>
-                                      <p>View details.</p>
-                                  </div>
-                                  <div class="portfolio-overlay"></div>
-                              </div>
-                              <img src="assets\images\portfolio\masonry\008.jpeg" alt="">
-                          </div>
-                      </a>
-                  </div>
-                  <!-- WORK 8 END -->
-                  <!-- WORK 9 START -->
-                  <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item design">
-                      <a class="open-project" href="project-1.html">
-                          <div class="portfolio-column">
-                              <div class="portfolio-hover">
-                                  <div class="portfolio-content">
-                                      <h2>PAPER MOCKUP</h2>
-                                      <hr>
-                                      <p>View details.</p>
-                                  </div>
-                                  <div class="portfolio-overlay"></div>
-                              </div>
-                              <img src="assets\images\portfolio\masonry\009.jpeg" alt="">
-                          </div>
-                      </a>
-                  </div>
-                  <!-- WORK 9 END -->
-              </div>
-          </div>
+      <h3 class="block-title">Profesores</h3>
+
+      <mat-form-field appearance="standard">
+        <mat-label>Buscar</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Remus Lupin" #input>
+      </mat-form-field>
+
+      <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort>
+      
+          <!-- Name Column -->
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+          </ng-container>
+      
+          <!-- House Column -->
+          <ng-container matColumnDef="house">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> House </th>
+            <td mat-cell *matCellDef="let element"> {{element.house}} </td>
+          </ng-container>
+      
+          <!-- BirthDay Column -->
+          <ng-container matColumnDef="dateOfBirth">
+            <th mat-header-cell *matHeaderCellDef> BirthDay </th>
+            <td mat-cell *matCellDef="let element"> {{element.dateOfBirth}} </td>
+          </ng-container>
+      
+          <!-- Patronus Column -->
+          <ng-container matColumnDef="patronus">
+            <th mat-header-cell *matHeaderCellDef> Patronus </th>
+            <td mat-cell *matCellDef="let element"> {{element.patronus}} </td>
+          </ng-container>
+
+           <!-- Imagen Column -->
+           <ng-container matColumnDef="image">
+            <th mat-header-cell *matHeaderCellDef> Img </th>
+            <td mat-cell *matCellDef="let element"> <img class="avatar" [src] = "element.image ? element.image : myImgUrl"/> </td>
+          </ng-container>
+      
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                       showFirstLastButtons 
+                       aria-label="Select page of periodic elements">
+        </mat-paginator>
       </div>
+
   </div>
   <div class="row text-center">
       <div class="col-md-12 btn-email">
-          <a class="btn lowercase">shout@james.com</a>
+          <a class="btn lowercase">Isaac Rodriguez</a>
       </div>
   </div>
 </section>
