--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,12 @@
 </div>
 <div class="preloader-left"></div>
 <div class="inline-menu-container">
-  <span class="status">Estoy disponible como Freelance</span>
+  <span class="status">Estoy disponible</span>
   <ul class="inline-menu">
       <li class="about menu-item">Resumen</li>
-      <li class="portfolio menu-item">Portafolio</li>
-      <li class="blog menu-item">Blog</li>
-      <li class="contact menu-item">Contacto</li>
+      <li class="portfolio menu-item">Profesores</li>
+      <li class="blog menu-item">Estudiantes</li>
+      <li class="contact menu-item">Casas</li>
       <li id="close" class="menu-item"><i class="ion-ios-close-empty"></i></li>
   </ul>
 </div>
@@ -19,13 +19,13 @@
 
       <div class="name-block">
           <div class="name-block-container">
-              <h1><span>Hola, Soy</span>Isaac Rodriguez</h1>
-              <h2>Analista De Software & Programador BackEnd/FrontEnd</h2>
-              <a target="_blank" href="" class="btn btn-download">Descargar CV</a>
+              <h1>Colegio Hogwarts</h1>
+              <h2><span>de Magia y Hechicería</span></h2>
+              <a target="_blank" href="https://drive.google.com/file/d/1WHmGXMUYzrecbFTxIzvMd4NfzvCUtlIA/view?usp=sharing" class="btn btn-download">Descargar CV</a>
               <ul class="social">
-                  <li><a href="https://www.linkedin.com/in/isaac-rodriguez-399960106/" target_="_blank"><i class="ion-social-linkedin"></i></a></li>
-                  <li><a href="https://github.com/ROM3Z"><i class="ion-social-github" target_="_blank"></i></a></li>
-                  <li><a href="https://wa.me/584124257178"><i class="ion-social-whatsapp" target_="_blank"></i></a></li>
+                  <li><a href="https://www.linkedin.com/in/isaac-rodriguez-399960106/" target="_blank"><i class="ion-social-linkedin"></i></a></li>
+                  <li><a href="https://github.com/ROM3Z" target="_blank"><i class="ion-social-github"></i></a></li>
+                  <li><a href="https://wa.me/584124257178" target="_blank"><i class="ion-social-whatsapp"></i></a></li>
               </ul>
           </div>
       </div>
@@ -37,20 +37,21 @@
           </div>
           <div class="portfolio-block  menu-block">
               <div class="portfolio-block-container">
-                  <h2 class="portfolio menu-item">Portafolio</h2>
+                  <h2 class="portfolio menu-item">Profesores</h2>
               </div>
           </div>
           <div class="blog-block  menu-block">
               <div class="blog-block-container">
-                  <h2 class="blog menu-item">Blog</h2>
+                  <h2 class="blog menu-item">Estudiantes</h2>
               </div>
           </div>
           <div class="contact-block  menu-block">
               <div class="contact-block-container">
-                  <h2 class="contact menu-item">Contacto</h2>
+                  <h2 class="contact menu-item">Casa</h2>
               </div>
           </div>
       </div>
+      
 
       <div class="content-blocks about">
         <app-resumen></app-resumen>
@@ -66,11 +67,14 @@
           <app-contacto></app-contacto>
       </div>
 
-      <div class="content-blocks pop">
-          <div id="close-pop" class="close-pop">Cerrar <i class="ion-ios-close-empty"></i></div>
-          <section class="content"></section>
+      <div class="content-blocks estu">
+          <app-estudiantes></app-estudiantes>
       </div>
 
+      <div class="content-blocks pop">
+        <div id="close-pop" class="close-pop">Cerrar <i class="ion-ios-close-empty"></i></div>
+        <section class="content"></section>
+    </div>
   </div>
 </section>
 
