--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,31 +1,90 @@
 <section class="content">
   <div class="block-content">
-      <h3 class="block-title">Mi Blog</h3>
-      <div class="row">
-          <div class="col-md-10 mx-auto">
-              <div *ngFor="let blox of cv.blog">
-                <div class="post">
-                  <div class="post-thumbnail">
-                      <div class="embed-responsive embed-responsive-16by9">
-                          <iframe class="embed-responsive-item" [src]="getVideoIframe(blox.src)" allowfullscreen></iframe>
-                      </div>
-                  </div>
-                  <div class="post-title">
-                      <a href="#"><h2>{{ blox.titulo }}</h2></a>
-                      <p class="post-info">
-                          <span class="post-author">{{ blox.autor }}</span>
-                          <span class="slash"></span>
-                          <span class="post-date">{{ blox.fecha }}</span>
-                          <span class="slash"></span>
-                          <span class="post-catetory">{{ blox.categoria }}</span>
-                      </p>
-                  </div>
-                  <div class="post-body">
-                      <a class="btn" target="_blank" href="{{ blox.url }}">Ver Mas</a>
-                  </div>
-                </div>
+      <h3 class="block-title">Estudiantes</h3>
+      <mat-form-field appearance="standard">
+        <mat-label>Buscar</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Harry" #input>
+      </mat-form-field>
+
+            <div class="mat-elevation-z8">
+                <table mat-table [dataSource]="dataSource" matSort>
+              
+                  <!-- Name Column -->
+                  <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                  </ng-container>
+              
+                  <!-- House Column -->
+                  <ng-container matColumnDef="house">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> House </th>
+                    <td mat-cell *matCellDef="let element"> {{element.house}} </td>
+                  </ng-container>
+              
+                  <!-- Birthday Column -->
+                  <ng-container matColumnDef="dateOfBirth">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> BirthDay </th>
+                    <td mat-cell *matCellDef="let element"> {{element.dateOfBirth}} </td>
+                  </ng-container>
+              
+                  <!-- Patronus Column -->
+                  <ng-container matColumnDef="patronus">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Patronus </th>
+                    <td mat-cell *matCellDef="let element"> {{element.patronus}} </td>
+                  </ng-container>
+
+                   <!-- Imagen Column -->
+                   <ng-container matColumnDef="image">
+                    <th mat-header-cell *matHeaderCellDef> Img </th>
+                    <td mat-cell *matCellDef="let element"> <img class="avatar" [src] = "element.image ? element.image : myImgUrl"/> </td>
+                  </ng-container>
+
+                  <!-- Actions Column -->
+                  <ng-container matColumnDef="actions">
+                    <th mat-header-cell *matHeaderCellDef> </th>
+                    <td mat-cell *matCellDef="let element; let i = index"> 
+                      <button mat-button color="warn" (click)="eliminarEstu(i)"><mat-icon>delete</mat-icon></button>
+                    </td>
+                  </ng-container>
+              
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                  
+                </table>
+              
+                <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                               showFirstLastButtons 
+                               aria-label="Select page of periodic elements">
+                </mat-paginator>
               </div>
-          </div>
-      </div>
+  </div>
+</section>
+
+<section class="content">
+  <div class="block-content"> 
+    <h3 class="block-title">Nuevo Estudiante</h3>
+
+    <mat-form-field appearance="fill">
+      <mat-label>Name</mat-label>
+      <input matInput>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>House</mat-label>
+      <mat-select>
+        <mat-option value="Gryffindor">Gryffindor</mat-option>
+        <mat-option value="Slytherin">Slytherin</mat-option>
+        <mat-option value="Ravenclaw">Ravenclaw</mat-option>
+        <mat-option value="Hufflepuff">Hufflepuff</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>BirthDay</mat-label>
+      <input matInput>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+    <mat-label>Patronus</mat-label>
+    <input matInput>
+  </mat-form-field>
+
   </div>
 </section>
